Bug 1525120 - Fix condition for decoding attachments (base64/qp) when saving or forwarding. r=jorgk

--HG--
extra : amend_source : 0960b5f2f74c295b488af1c70ddbba2092c7b864